hyrax_tests/errors/NoSuchVariable.dods
url = http://localhost:8080/opendap/data/nc/fnoc1.nc.dods?k
-s 
